# promus

./: .env.convex.example  .env.deployment.example  .env.local.example  .gitignore  .gitmodules  .mcp.json  .tolgeerc  AGENTS.md  README.md  btca.config.jsonc  eslint.config.js  package.json  vercel.json
.claude/: plan.md
.claude/agents/: convex-backend-architect.md
.claude/commands/: saas-starter-pr.md
.claude/skills/wandb-improve/: SKILL.md
.codex/environments/: environment.toml
.github/workflows/: static-checks.yml
.husky/: pre-commit
docs/setup/i18n/: i18n-setup.md
e2e/: signout.spec.ts
e2e/utils/: auth.ts
evals/: RESULTS.md  pyproject.toml
evals/datasets/: tasks.json
evals/scorers/: code.py  plan.py
evals/scripts/: run_eval.py
patches/: just-bash@2.11.6.patch
scripts/: build-vibe-snapshot.ts  parse-agent-trace.py  static-checks.ts  test-sandbox-timing.ts  vercel-deploy.ts
src/: app.html  hooks.server.ts
src/blocks/hero/: hero-five.svelte  hero-octopus-animation.svelte
src/blocks/magic/: Marquee.svelte
src/i18n/: de.json  en.json  es.json  fr.json
src/lib/chat/core/: optimistic.ts
src/lib/chat/ui/: ChatRoot.svelte
src/lib/components/: RiveBackground.svelte  SEOHead.svelte  nav-user.svelte
src/lib/components/icons/: logo.svelte  (+11 more)
src/lib/convex/: auth.ts  convex.config.ts  crons.ts  env.ts  http.ts  openai.ts  sandboxAgent.ts  sandboxApi.ts  sandboxExecute.ts  schema.ts  todos.ts  unipile.ts  unipileWebhook.ts
src/routes/: +layout.svelte  layout.css
src/routes/[[lang]]/: +layout.svelte
static/: site.webmanifest
(+144 files in other folders)
