[project]
name = "promus-evals"
version = "0.1.0"
description = "W&B Weave evaluation suite for Promus task agent"
requires-python = ">=3.12"
dependencies = [
    "mistralai>=1.12.4",
    "weave>=0.52.29",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["scorers"]

[tool.ty.environment]
python-version = "3.12"
